resolved scrollbar error

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -12,6 +12,7 @@
 
 html,
 body {
+  max-height: 100%;
   max-width: 100vw;
   overflow-x: hidden;
   font-family: Monospace;
